--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@tailwindcss/typography": "^0.5.13",
     "autoprefixer": "10.4.19",
     "glob-all": "^3.3.1",
+    "gsap": "^3.12.5",
     "laravel-vite-plugin": "^1.0.4",
+    "lenis": "^1.1.13",
     "postcss": "^8.4.38",
     "postcss-import": "^16.1.0",
     "resolve-url-loader": "^5.0.0",
