--- a/resources/fieldsets/page_builder.yaml
+++ b/resources/fieldsets/page_builder.yaml
@@ -45,19 +45,16 @@ fields:
               display: 'Artists Grid'
               fields:
                 -
+                  handle: title
+                  field:
+                    type: text
+                    display: Title
+                -
                   handle: intro
                   field:
                     remove_empty_nodes: false
                     type: bard
                     display: Intro
-                -
-                  handle: artists
-                  field:
-                    create: false
-                    collections:
-                      - artists
-                    type: entries
-                    display: Artists
                 -
                   handle: collection
                   field:
