--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@alpinejs/morph": "^3.14.1",
     "@alpinejs/persist": "^3.14.1",
     "alpinejs": "^3.14.1",
+    "headroom.js": "^0.12.0",
     "laravel-precognition-alpine": "^0.5.5",
     "puppeteer": "^23.5.0"
   },
