--- a/content/trees/navigation/main.yaml
+++ b/content/trees/navigation/main.yaml
@@ -57,3 +57,7 @@ tree:
       -
         id: d157d9c9-0c12-4f67-9da2-6d8e06508d0f
         entry: 97d5889f-63d3-48ee-9ebf-4a7cc724df59
+  -
+    id: 168b9ba3-169e-4b44-a399-28ec741b0302
+    title: Contact
+    url: '#contact'
