--- a/content/trees/navigation/main.yaml
+++ b/content/trees/navigation/main.yaml
@@ -1,7 +1,7 @@
 tree:
   -
     id: d4451a43-a8db-4557-9dd8-b7da035017cc
-    title: Information
+    title: Info
     children:
       -
         id: d0bd8cc1-4edc-41d5-ba5d-7bef202ce051
