--- a/resources/forms/contact.yaml
+++ b/resources/forms/contact.yaml
@@ -2,16 +2,11 @@ title: Contact
 honeypot: fax
 email:
   -
-    to: info@site.com
-    from: info@site.com
+    id: RnB75TnW
+    to: osmosisinthetrees.info@gmail.com
+    from: info@osmosisinthetrees.com
     reply_to: '{{ email }}'
     subject: '{{ trans:strings.form_subject_received }}'
     html: email/form_owner
     text: email/form_owner_text
-  -
-    to: '{{ email }}'
-    from: info@site.com
-    reply_to: info@site.com
-    subject: '{{ trans:strings.form_subject_sent }}'
-    html: email/form_sender
-    text: email/form_sender_text
+
