--- a/content/collections/artists.yaml
+++ b/content/collections/artists.yaml
@@ -1,5 +1,13 @@
 title: Artists
+template: default
+layout: layout
 revisions: false
+sort_dir: asc
 date_behavior:
   past: public
   future: private
+preview_targets:
+  -
+    label: Entry
+    url: '{permalink}'
+    refresh: true
