--- a/content/trees/collections/pages.yaml
+++ b/content/trees/collections/pages.yaml
@@ -9,3 +9,5 @@ tree:
     entry: 059d4d8d-fc60-49f8-8823-7da10549e84e
   -
     entry: 9ff67a5e-425a-4301-9b99-bfdfff0c47e9
+  -
+    entry: 969801fe-3f21-4d76-a580-7a8a93d18402
