--- a/content/trees/navigation/main.yaml
+++ b/content/trees/navigation/main.yaml
@@ -4,6 +4,9 @@ tree:
     title: Info
     url: '#info'
   -
+    id: dd03d006-25a0-4ea6-9554-d085f76fac95
+    entry: 969801fe-3f21-4d76-a580-7a8a93d18402
+  -
     id: 168b9ba3-169e-4b44-a399-28ec741b0302
     title: Contact
     url: '#contact'
