--- a/content/globals/configuration.yaml
+++ b/content/globals/configuration.yaml
@@ -1,9 +1,16 @@
 title: Configuration
 data:
   osmosis_simple_location: 'Takilma, OR'
-  start_date: '2024-10-24'
-  end_date: '2024-10-27'
-  tickets_link: 'https://ra.co/events/1986191'
+  start_date: '2024-09-25'
+  end_date: '2024-09-28'
+  tickets_link: 'https://ra.co/events/2084436'
+  desktop_header_text: |-
+    Osmosis in the trees 2025
+    Year 3
+    Sept 25-28 | Takilma, OR
+  instagram: 'https://www.instagram.com/osmosis__world/'
+  discord: 'https://discord.gg/t9jDCawb'
+  soundcloud: 'https://soundcloud.com/osmosis_world'
   error_404_entry: 059d4d8d-fc60-49f8-8823-7da10549e84e
   copyright_since: 2024
   privacy_statement_type: none
