--- a/content/globals/browser_appearance.yaml
+++ b/content/globals/browser_appearance.yaml
@@ -6,5 +6,5 @@ data:
   display_standalone: false
   use_theme_color: false
   use_favicons: true
-  svg: favicon_24.png
+  svg: oitt_25_logo_elements-03.png
   background: '#ffffff'
