--- a/content/globals/configuration.yaml
+++ b/content/globals/configuration.yaml
@@ -9,7 +9,7 @@ data:
     Year 3
     Sept 25-28 | Takilma, OR
   instagram: 'https://www.instagram.com/osmosis__world/'
-  discord: 'https://discord.gg/t9jDCawb'
+  discord: 'https://discord.gg/2FRasckK'
   soundcloud: 'https://soundcloud.com/osmosis_world'
   error_404_entry: 059d4d8d-fc60-49f8-8823-7da10549e84e
   copyright_since: 2025
